Fix sign-in & sign-up page layout
Remove 100vh on container-form to prevent the forms from being
cut off on mobile view if window height is not tall enough
to display all of content

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -401,7 +401,7 @@ h1, h2, h3, h4 {
 }
 
 .container-form {
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     flex-direction: column;
     justify-content: center;
